# ai-project

./: .gitignore  README.md  pyproject.toml
ai/: settings.py  urls.py
ai/middlewares/: subscription_middleware.py
apps/authentication/: urls.py  views.py
docs/: ServerManagement.md
src/ai_tool/: apps.py  urls.py  views.py
src/ai_tool/templates/: gpt.html
src/authentication/: urls.py  views.py
src/authentication/forms/: custom_login_view.py  custom_password_change_view.py  custom_password_reset_view.py  custom_user_creation_form.py
src/authentication/templates/: forgot_password.html  login.html  registration.html
src/core/: urls.py  views.py
src/payment/: models.py  urls.py  views.py
src/payment/migrations/: 0002_initial.py  0003_package.py  0004_alter_subscription_active_until.py
src/payment/services/: __init__.py  stripe_service.py  subscribe_service.py
src/payment/templates/: my_subscriptions.html
src/user/: urls.py  views.py
src/user/templates/: user_settings.html
static/assets/js/: soft-ui-dashboard-tailwind.js
templates/components/: cards.html  messages.html  navigation.html  settings_panel.html
templates/private/: layout.html  notifications.html
templates/public/: layout.html
templates/registration/: login.html  password_change_form.html  password_reset_form.html
